<resources>
    <string name="app_name">Covid News</string>
    <string name="version">v1.0.0</string>
    <string name="initStr">Covid News</string>
    <string name="search">جستجو</string>
    <string name="country">کشور</string>
    <string name="cases">مبتلا شدگان</string>
    <string name="death">جان باخته</string>
    <string name="active_persons">مبتلایان</string>
    <string name="all_active">کل مبتلایان :</string>
    <string name="death_persons">جانباختگان</string>
    <string name="all_death">کل جانباختگان :</string>
    <string name="new_death">جانباختگان امروز :</string>
    <string name="recovered_persons">بهبود یافتگان</string>
    <string name="all_recovered">کل بهبودیافتگان :</string>
    <string name="new_recovered">بهبودیافتگان امروز :</string>
    <string name="cases_persons">شناسایی شدگان</string>
    <string name="new_cases">شناسایی شدگان امروز:</string>
    <!--
        <string name="active">مبتلا</string>
        <string name="recovered">بهبود یافته</string>
        <string name="critical">در وضعیت وخیم :</string>
        <string name="all_cases">کل شناسایی شدگان:</string>-->


    <string name="egypt">Egypt</string>
    <string name="all_cases">All Cases</string>
    <string name="world">Worldwide</string>
    <string name="share_app">Share App</string>
    <string name="licences" translatable="false">Licences</string>
    <string name="about">About Virus</string>
    <string name="advices">Advices</string>
    <string name="emergency">Emergency</string>
    <string name="image_resource">Image Resources</string>
    <string name="flat_icons_site" translatable="false">Flat Icons Site</string>
    <string name="gif_resources">Gif Resources</string>
    <string name="made_with_love" translatable="false">Made with love by <b>Mohamed Emad</b>\nstay safe</string>
    <string name="how_it_spreads">How it spreads</string>
    <string name="stay_safe_n">Stay safe\nstay Home</string>
    <string name="spread">Coronavirus disease spreads primarily through contact with an infected person when they cough or sneeze. It also spreads when a person touches a surface or object that has the virus on it, then touches their eyes, nose, or mouth.</string>
    <string name="about_corona">The disease causes respiratory illness (like the flu) with symptoms such as a cough, fever, and in more severe cases, difficulty breathing. You can protect yourself by washing your hands frequently, avoiding touching your face, and avoiding close contact (1 meter or 3 feet) with people who are unwell.</string>
    <string name="corona_name">Coronavirus disease (COVID‑19) Also called: 2019-nCov, 2019 Novel Corona Virus</string>
    <string name="total_cases">Total cases</string>
    <string name="recovered">Recovered</string>
    <string name="critical">Critical</string>
    <string name="active">Active</string>
    <string name="deaths_per_one_million">Deaths Per One Million</string>
    <string name="cases_per_one_million">cases Per One Million</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="wrong">Something went Wrong</string>
    <string name="network_connection">No Network Connection</string>
    <string name="total_cases_c">Total Cases:</string>
    <string name="today_cases_c">Today Cases:</string>
    <string name="total_deaths_c">Total Deaths:</string>
    <string name="today_deaths_c">Today Deaths:</string>
    <string name="critical_C">Critical:</string>
    <string name="active_c">Active:</string>
    <string name="recovered_c">Recovered:</string>
    <string name="more">More</string>
    <string name="_105" translatable="false">105</string>
    <string name="call">Call</string>
    <string name="_15335" translatable="false">15335</string>
    <string name="granted">Permission GRANTED</string>
    <string name="denied">Permission DENIED</string>
    <string name="permission_nedded">Permission needed</string>
    <string name="permission_reason">This permission is needed so that The app can Call the Emergency Numbers</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="today_deaths">Today Deaths</string>
    <string name="no_network_con">No Network Connection\ncheck your connection and try again</string>
    <string name="refresh">REFRESH</string>
    <string name="today_cases">Today cases</string>
    <string name="something_went_wrong_">Something went wrong\ncheck your Internet connection and Try again!</string>
    <string name="update_no_connection">No Network Connection to Update</string>
    <string name="ministry_of_health_hotlines">Ministry of Health Hotline</string>
    <string name="psychological_support">Two Hotlines to provide psychological support to citizens in homes during this period.</string>

</resources>